# diffolars

./: .coverage  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  LICENSE-APACHE  README.md  check_db_conn.py  check_pypi_published.py  main.py  nb.ipynb  pyproject.toml  report.xml  test_cli.py  test_diff.py  test_notebook.ipynb  test_suite.py
.github/workflows/: ci.yml  pages.yml
docs/: search.js
docs/api/: diffolars.html  index.html  search.js
docs/api/diffolars/: cli.html  diff.html
docs/diffolars/: cli.html  demo.html  diff.html  log.html
src/datadiff/: __init__.py  demo.py
src/diffolars/: cli.py  demo.py  diff.py  log.py
src/yadd/: diff.py
tests/: test_cli.py  test_demo.py  test_diff.py
