[project]
name = "diffolars"
version = "1.0.0"
description = "A small Polars-based toolkit for comparing two versions of a dataframe and generating randomized test data to exercise that comparison."
readme = "README.md"
authors = [
    { name = "Kenneth O'Dell", email = "kenneth.l.odell@gmail.com" }
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pyodbc>=5.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "sqlalchemy>=2.0.50",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
